--- a/starter/starter.ipynb
+++ b/starter/starter.ipynb
@@ -68,26 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: matplotlib in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (3.9.4)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (4.58.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (1.4.7)\n",
-      "Requirement already satisfied: numpy>=1.23 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (2.0.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (11.2.1)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (3.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from matplotlib) (6.5.2)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib) (3.22.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\seb\\anaconda3\\envs\\dsnd_pipeline\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (3.9.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (24.1)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\sebbr\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 18442 entries, 0 to 18441\n",
       "Data columns (total 9 columns):\n",
@@ -226,7 +224,7 @@
        "4  General Petite            Tops      Knits                1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +243,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "import spacy\n",
     "# Load data\n",
     "df = pd.read_csv(\n",
     "    'data/reviews.csv',\n",
@@ -732,6 +731,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load spaCy model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Define lemmatization function\n",
+    "def lemmatize_text(texts):\n",
+    "    return [\n",
+    "        \" \".join(token.lemma_ for token in doc if not token.is_stop and not token.is_punct)\n",
+    "        for doc in nlp.pipe(texts, disable=[\"parser\", \"ner\"])\n",
+    "    ]\n",
+    "\n",
     "# Load and split data\n",
     "df = pd.read_csv('data/reviews.csv')\n",
     "\n",
@@ -759,7 +768,8 @@
     "])\n",
     "\n",
     "text_transformer = Pipeline(steps=[\n",
-    "    ('tfidf', TfidfVectorizer(max_features=500))\n",
+    "    ('lemmatize', FunctionTransformer(lemmatize_text, validate=False)),\n",
+    "    ('tfidf', TfidfVectorizer(max_features=500, stop_words=\"english\"))\n",
     "])\n",
     "\n",
     "# Combine transformers into ColumnTransformer\n",
@@ -769,7 +779,7 @@
     "    ('txt', text_transformer, text_features)\n",
     "])\n",
     "\n",
-    "# Full pipeline with logistic regression and classifier\n",
+    "# Full pipeline with logistic regression classifier\n",
     "model = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('classifier', LogisticRegression(max_iter=1000))\n",
@@ -895,9 +905,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -909,7 +919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
